[package]
name = "mesh-fastpath-userspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
mesh-fastpath-common = { path = "../mesh-fastpath-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
json = "0.12.4"

[[bin]]
name = "mesh-fastpath-userspace"
path = "src/main.rs"
